@@ -48,8 +48,7 @@ module RecordFilter
 
       def add_restriction(column_name, operator, value, options={})
         check_column_exists!(column_name)
-        restriction_class = RecordFilter::Restrictions::Base.class_from_operator(operator)
-        restriction = restriction_class.new("#{@table_name}.#{column_name}", value, options)
+        restriction = RestrictionFactory.build(operator, "#{@table_name}.#{column_name}", value, options)
         self << restriction
         restriction
       end
